# ChangeLog for x11-plugins/enigmail
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.151 2009/01/05 13:32:26 ranger Exp $

  05 Jan 2009; Brent Baude <ranger@gentoo.org> enigmail-0.95.7-r3.ebuild:
  Marking enigmail-0.95.7-r3 ppc64 for bug 251322

  02 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  enigmail-0.95.7-r3.ebuild:
  ppc stable, bug #251322

  01 Jan 2009; Tobias Heinlein <keytoaster@gentoo.org>
  enigmail-0.95.7-r3.ebuild:
  amd64 stable wrt security bug #251322

  01 Jan 2009; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.7-r3.ebuild:
  alpha/ia64/sparc/x86 stable wrt #251322

*enigmail-0.95.7-r3 (31 Dec 2008)

  31 Dec 2008; Raúl Porcel <armin76@gentoo.org> -enigmail-0.95.6-r4.ebuild,
  -enigmail-0.95.7-r1.ebuild, +enigmail-0.95.7-r3.ebuild:
  Revision bump for 2.0.0.19

  14 Dec 2008; Jeremy Olexa <darkside@gentoo.org> enigmail-0.95.7-r2.ebuild:
  amd64 stable, bug 246628

  13 Dec 2008; Raúl Porcel <armin76@gentoo.org> -enigmail-0.94.1.ebuild,
  enigmail-0.95.7-r2.ebuild:
  Add workaround on amd64 and gcc-4.3, bug #246421

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  enigmail-0.95.7-r2.ebuild:
  ppc stable, bug #246628

  26 Nov 2008; Brent Baude <ranger@gentoo.org> enigmail-0.95.7-r2.ebuild:
  Marking enigmail-0.95.7-r2 ppc64 for bug 246628

  25 Nov 2008; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.7-r2.ebuild:
  Add built_with_use check for pinentry, bug #246628

  23 Nov 2008; Raúl Porcel <armin76@gentoo.org> enigmail-0.95.7-r2.ebuild:
  alpha/ia64/sparc/x86 stable wrt #246602

*enigmail-0.95.7-r2 (23 Nov 2008)

  23 Nov 2008; Raúl Porcel <armin76@gentoo.org> +enigmail-0.95.7-r2.ebuild:
  Add revision for 2.0.0.18

  28 Sep 2008; Markus Meier <maekke@gentoo.org> enigmail-0.95.7-r1.ebuild:
  amd64 stable, bug #238535

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org> -enigmail-0.95.7.ebuild,
  enigmail-0.95.7-r1.ebuild: