@@ -26,9 +26,7 @@ DIST enigmail-0.95.7-zh-CN.xpi 31621 RMD160 3adf067c27060706b0b5649b2bd0cda9bbbf
 DIST enigmail-0.95.7-zh-TW.xpi 31721 RMD160 dfe5c6cc8162fc361c075b8e5c70fced41e3880f SHA1 034f5ac8312e5cbf4b977fa817e4aec93243a9b3 SHA256 d3ee112972b4e7788d34841121fadc0083d5e50fc14ce8e1355b765fa8aaaf42
 DIST enigmail-0.95.7.tar.gz 1198743 RMD160 3e8c2544547b6d76cd9b4d95e374fe4a2c333b66 SHA1 ab9cfe90b272f466d2c236b4998070a142d5b609 SHA256 8832e722c25aeb15cbfbcdc6f2994e63fc49e42b59773430f02e2d8dbf90e445
 DIST mozilla-thunderbird-2.0.0.16-patches-0.1.tar.bz2 30163 RMD160 58d8b067c9a15d9e550b9264a3406d61d8bb7406 SHA1 38e41cc7fbe382991637fd67374ee4df87402273 SHA256 afa27ebd5203a4897f896135733fd74f4aebeddfad5ff6126f7e89196ae37e51
-DIST thunderbird-2.0.0.18-source.tar.bz2 40455125 RMD160 093b2328a000f18494fd552cce58fa2ec55085a1 SHA1 4d05300280763e34c7a115835523ed2805f7733c SHA256 f18f97833661b260d819161080329f857e489b3c934f4648012b8728b7f3d597
 DIST thunderbird-2.0.0.19-source.tar.bz2 40452690 RMD160 7139fb27b1a236564ee6470c4be13e93b6ec9217 SHA1 4d2e0f8b405bb0ceab20a9f570ce91cf4640f456 SHA256 9a23d3a93c7646867227558727cf564eaba70da87e21e097eb46d951ed839f25
-EBUILD enigmail-0.95.7-r2.ebuild 6114 RMD160 6789eb927c5e9fb8791b9368ee0bce775e614224 SHA1 970bd5afbbf62cdd1476aaea4cd8dca7d24ae666 SHA256 e8544c2e8bf8435e029c6a82cfa8402a025378177bcfce5807e4a3e2f5cd02ff
-EBUILD enigmail-0.95.7-r3.ebuild 6112 RMD160 bc55b3a8b753e9280a2a29ecc3557770bae67963 SHA1 fac35bfd79f392773a1457298902714ca2a1aeb5 SHA256 5cabcffa020101a2f658e8677f2fcf3378cecad7fdc752892376c7dbd3d59b01
-MISC ChangeLog 20854 RMD160 0a157395df41c05bf61a5ff155a9855017def03a SHA1 1faadc155fa230d54ea9fab7c921c98bbc9395e5 SHA256 472b9a7d6719b68daee6ea3675c4f011e889ee094f77e0959cc89e3c4c7aaee1
+EBUILD enigmail-0.95.7-r3.ebuild 6151 RMD160 0f502199dfcc8efbd68266ec3cc74c949909b5ab SHA1 33219145d5e3217a0091cf8e58f1a71760c3103b SHA256 4fb466e7288c534ed8935102f800b7429c8cd7426f56d8679fba7cfe90f6bd7a
+MISC ChangeLog 20977 RMD160 8df27fb506861e549af999cc31df0c7cf1955329 SHA1 a69786ef8a68e366924fc9df31f9656e74e392d9 SHA256 93a328170a76c6ad829ed1fb2b3d832322481ef5bd56999553b7b9cfa0f4a2a5
 MISC metadata.xml 238 RMD160 20be188d400f8ae54fb1eae8bfb243c43eed2395 SHA1 fb7dacf03f1ce8294d6d2f07d4c2d7ff69ee7525 SHA256 ef51e99b6b1ccee48a71906e90a4111f58793292fe1248934a811fcb02506036
